--- a/rcti.html
+++ b/rcti.html
@@ -24,7 +24,7 @@
         var video_title = "Live Streaming";
     </script>
         <div id="video" class="fp-slim fp-mute"></div>
-        <script src="nnVideo.core.js?v=98c76261ffc">
+        <script src="https://cdn.detik.net.id/detikVideo/detikVideo.core.js?v=920f8e58">
         {
             target      : 'video',
             title       : 'Live Streaming',
