--- a/rcti.html
+++ b/rcti.html
@@ -24,7 +24,7 @@
         var video_title = "Live Streaming";
     </script>
         <div id="video" class="fp-slim fp-mute"></div>
-        <script src="https://cdn.detik.net.id/detikVideo/detikVideo.core.js?v=920f8e58">
+        <script src="/nnVideo.core.js">
         {
             target      : 'video',
             title       : 'Live Streaming',
