--- a/rcti.html
+++ b/rcti.html
@@ -8,7 +8,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes"/>
         <meta name="description" content="Live Streaming" />
         
-        <link rel="stylesheet" href="//vjs.zencdn.net/5.4.6/video-js.min.css?v=1.8">
+        <link rel="stylesheet" href="//cdn.detik.net.id/flowplayer/skin.css?v=1.8">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
             <style>
