--- a/rcti.html
+++ b/rcti.html
@@ -31,7 +31,7 @@
             autoplay    : false,
             mute        : false,
             live        : true,
-            imageUrl    : "../img/thumbs/rcti.jpg?v=8.3.2",
+            imageUrl    : "rcti.jpg?v=8.3.2",
             channel     : "livestreaming",
             videoUrl    : "https://linier.akamaized.net/live/eds/RCTI_Logo/sa_hls/RCTI_Logo.m3u8",
             adRules     : '',
