--- a/metrotv.html
+++ b/metrotv.html
@@ -1,38 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head prefix="og:http://ogp.me/ns#">
-    <title>METROTV</title>
-    <meta charset="utf-8">
-    <meta property="fb:app_id" content="306338632814491"/>
-    <meta property="og:type" content="warningfm:station"/>
-    <meta property="og:url" content="https://tv.mbahnunungonline.net/live/metrotv"/>
-    <meta property="og:type" content="movie" /> 
-    <meta property="og:video:height" content="326" /> 
-    <meta property="og:video:width" content="486" /> 
-    <meta property="og:video:type" content="application/x-shockwave-flash" />
-    <meta property="og:title" content="METROTV" /> 
-    <meta property="og:description" content="Klik Gambarnya Boss untuk nonton METROTV langsung lewat Facebook." />
-    <meta property="og:image" content="https://3.bp.blogspot.com/-wvQngZIJEE0/T8d5n4YSmRI/AAAAAAAABC0/1SmFmgjdPkY/s320/metrotv.png" />
-    <meta property="og:video" content="https://cdn1.mbahnunungonline.net/player/player5.8.swf?file=mp4:metro_360p.stream&type=rtmp&streamer=rtmp://103.225.66.101:1935/live-edge&autostart=true&stretching=exactfit&volume=100&bandwidth=1&duration=0&showdigits=&&stretching=exactfit&backcolor=000000&frontcolor=ffffff&lightcolor=CD0000&screencolor=0000fff&volume=100&controlbar=over&autostart=true&displayclick=fullscreen&repeat=false&image=https://2.bp.blogspot.com/_Eg6k9X3yWUM/S_jSj7gsZ4I/AAAAAAAAACM/NtMW7mPg6ZI/s1600/metro.png"/>
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/jwplayer.css' />
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/player.css' />
-    <style type="text/css">
-        body { margin:0 auto; padding:0; background:#2f3542; overflow: hidden; }
-        #title { font:bold 24px/36px Arial, sans-serif; color:#000; margin:40px auto 10px auto; display:none; text-shadow:#FFF 2px 2px 0; }
-        #description { font:13px/20px Arial, sans-serif; margin:15px auto; display:none; text-shadow:#FFF 1px 1px 0; }
-    </style>
-    <script type="text/javascript">
-    </script>
-    <script src="//ssl.p.jwpcdn.com/player/v/8.4.2/jwplayer.js?v=1.1.0.0.222"></script>
-    <script>jwplayer.key = "9dOyFG96QFb9AWbR+FhhislXHfV1gIhrkaxLYfLydfiYyC0s";</script>
-  </head>
-  
-<body bgcolor="#2f3542" text="white" topmargin="0" leftmargin="0" rightmargin="0">
-<div align="center">
-<script type="text/javascript">
-<!-- tv.mbahnunungonline.net--> 
-document.write(unescape('%3C%64%69%76%20%69%64%3D%22%70%6C%61%79%65%72%22%3E%3C%2F%64%69%76%3E%0A%3C%69%66%72%61%6D%65%0A%20%20%20%20%73%72%63%3D%22%2F%65%6D%62%65%64%2F%6D%65%74%72%6F%74%76%32%22%0A%20%20%20%20%68%65%69%67%68%74%3D%22%33%34%30%22%0A%20%20%20%20%77%69%64%74%68%3D%22%35%39%36%22%0A%20%20%20%20%66%72%61%6D%65%62%6F%72%64%65%72%3D%22%30%22%0A%20%20%20%20%73%63%72%6F%6C%6C%69%6E%67%3D%22%6E%6F%22%0A%20%20%20%20%61%6C%6C%6F%77%66%75%6C%6C%73%63%72%65%65%6E%3D%22%74%72%75%65%22%3E%0A%3C%2F%69%66%72%61%6D%65%3E'));
-</script>
-</div>
-</body>
+   <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+       
+       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+       <!-- Start Meta Ads -->
+       <meta name="platform" content="desktop" />
+       <meta name="site_name" content="streaming" />
+       <!-- End Meta Ads -->
+       <title>Live Streaming</title>
+       <style>
+           body {
+               margin:0;
+               padding:0;
+               overflow: hidden;
+           }
+       </style>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+       <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
+	   
+       <div align="center">
+        <video poster="../img/thumbs/metrotv.jpg?v=8.3.2" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
+        <source src="https://edge.medcom.id/live-edge/smil:metro.smil/playlist.m3u8" type="application/x-mpegURL" />
+       </video>
+     <script>
+      window.hola_player();
+     </script>
+     </div>
+   </body>
 </html>
