--- a/tvone.html
+++ b/tvone.html
@@ -24,7 +24,7 @@
        </video>
      <script>
     (function(){
-      window.hola_player({title: 'KOMPASTV'});
+      window.hola_player({title: 'tvOne'});
     })();
   </script>
      </div>
