--- a/aljazeera_ar.html
+++ b/aljazeera_ar.html
@@ -19,12 +19,14 @@
        <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://4.bp.blogspot.com/-bITXJ_qhAPE/XMfOpLe4U8I/AAAAAAAALY0/_Lsee4KO6dM9efRzPCEhHXk8LkRvh6awwCLcBGAs/s1600/aljazeera_ar.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://4.bp.blogspot.com/-bITXJ_qhAPE/XMfOpLe4U8I/AAAAAAAALY0/_Lsee4KO6dM9efRzPCEhHXk8LkRvh6awwCLcBGAs/s1600/aljazeera_ar.jpg?v=8.3.2" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://aja-hd-web-hls-live.secure.footprint.net/egress/chandler/aljazeera2/arabichd/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
-      window.hola_player();
-     </script>
+    (function(){
+      window.hola_player({title: 'Al Jazeera'});
+    })();
+  </script>
      </div>
    </body>
 </html>
