--- a/alarabiya.html
+++ b/alarabiya.html
@@ -16,7 +16,7 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
+       <script src="https://cdnjs.loli.net/ajax/libs/hola_player/1.0.89/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="https://2.bp.blogspot.com/-YJEXzBdxQYM/XMYaAgWZS0I/AAAAAAAALWw/UitVHliWdT0qrDNCkZ599WuQt-EQFNgBgCLcBGAs/s1600/alarabiya.net.jpg?v=8.3.2" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
