--- a/antv.html
+++ b/antv.html
@@ -19,7 +19,7 @@
        <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="../img/thumbs/antv-tv-stream.jpg?v=8.3.2" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://content.jwplatform.com/v2/media/vLShyhLN/poster.jpg?width=720" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s102/01.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
