--- a/indosiar.html
+++ b/indosiar.html
@@ -24,7 +24,7 @@
        </video>
      <script>
     (function(){
-      window.hola_player({title: 'Indosiar'});
+      window.hola_player({title: 'INDOSIAR'});
     })();
   </script>
      </div>
