--- a/indosiar.html
+++ b/indosiar.html
@@ -19,7 +19,7 @@
        <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://content.jwplatform.com/v2/media/8NTC1ont/poster.jpg?width=720" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://assets-jpcust.jwpsrv.com/thumbnails/7nbbbf6v-720.jpg" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://kastproxy-us.herokuapp.com/http://rr3.dens.tv/s/s251/01.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
