--- a/sctv.html
+++ b/sctv.html
@@ -7,7 +7,7 @@
        <meta name="platform" content="desktop" />
        <meta name="site_name" content="streaming" />
        <!-- End Meta Ads -->
-       <title>Live Streaming</title>
+       <title>SCTV Live Streaming</title>
        <style>
            body {
                margin:0;
