--- a/transtv.html
+++ b/transtv.html
@@ -19,13 +19,15 @@
        <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="../img/thumbs/transtv.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://assets-jpcust.jwpsrv.com/thumbnails/dk5clz1v-720.jpg" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://livetvhooq.akamaized.net:443/d47264e2fe8f43848fb79b43915fb298/ap-southeast-1/5493668622001/profile_2/chunklist.m3u8?hdnts=st=1573597746~exp=9007200828338737~acl=/d47264e2fe8f43848fb79b43915fb298/*/profile_2/chunklist.m3u8*~hmac=f7affc9ab3c5d753e46be5cb9c59599ff9af1992dd034c161ae4831ee9f9bfa9
 " type="application/x-mpegURL" />
        </video>
      <script>
-      window.hola_player();
-     </script>
+    (function(){
+      window.hola_player({title: 'Indosiar'});
+    })();
+  </script>
      </div>
    </body>
 </html>
