--- a/transtv.html
+++ b/transtv.html
@@ -7,7 +7,7 @@
        <meta name="platform" content="desktop" />
        <meta name="site_name" content="streaming" />
        <!-- End Meta Ads -->
-       <title>Live Streaming</title>
+       <title>TRANSTV Live Streaming</title>
        <style>
            body {
                margin:0;
@@ -25,7 +25,7 @@
        </video>
      <script>
     (function(){
-      window.hola_player({title: 'Indosiar'});
+      window.hola_player({title: 'TRANSTV'});
     })();
   </script>
      </div>
