--- a/tvri.html
+++ b/tvri.html
@@ -7,7 +7,7 @@
        <meta name="platform" content="desktop" />
        <meta name="site_name" content="streaming" />
        <!-- End Meta Ads -->
-       <title>Live Streaming</title>
+       <title>TVRI Live Streaming</title>
        <style>
            body {
                margin:0;
@@ -19,12 +19,14 @@
        <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="../img/thumbs/tvri_720.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="../img/thumbs/tvri_720.jpg?v=8.3.2" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s11/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
-      window.hola_player();
-     </script>
+    (function(){
+      window.hola_player({title: 'TVRI'});
+    })();
+  </script>
      </div>
    </body>
 </html>
