--- a/tvri.html
+++ b/tvri.html
@@ -19,7 +19,7 @@
        <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="../img/thumbs/tvri_720.jpg?v=8.3.2" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://content.jwplatform.com/v2/media/odC0YX5G/poster.jpg?width=720" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s11/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
