--- a/mytv.html
+++ b/mytv.html
@@ -7,7 +7,7 @@
        <meta name="platform" content="desktop" />
        <meta name="site_name" content="streaming" />
        <!-- End Meta Ads -->
-       <title>Live Streaming</title>
+       <title>MYTV Live Streaming</title>
        <style>
            body {
                margin:0;
@@ -19,13 +19,15 @@
        <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="../img/thumbs/Mayapada_TV.png?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://content.jwplatform.com/v2/media/YtKBjwyn/poster.jpg?width=720" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://edge.nim.mivo.tv/intv6vkhr543hkwt/intv_all/playlist.m3u8" type="application/x-mpegURL" />
         
        </video>
      <script>
-      window.hola_player();
-     </script>
+    (function(){
+      window.hola_player({title: 'MYTV'});
+    })();
+  </script>
      </div>
    </body>
 </html>
