--- a/mytv.html
+++ b/mytv.html
@@ -25,7 +25,7 @@
        </video>
      <script>
     (function(){
-      window.hola_player({title: 'MYTV'});
+      window.hola_player({title: 'mytv'});
     })();
   </script>
      </div>
