--- a/metrotv.html
+++ b/metrotv.html
@@ -5,9 +5,9 @@
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
        <!-- Start Meta Ads -->
        <meta name="platform" content="desktop" />
-       <meta name="site_name" content="streaming" />
+       <meta name="MetroTV Live Streaming" content="streaming" />
        <!-- End Meta Ads -->
-       <title>Live Streaming</title>
+       <title>MetroTV Live Streaming</title>
        <style>
            body {
                margin:0;
