--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@ document.getElementsByTagName('head')[0].appendChild(meta);
 		autostart: 'true',
 		file: "https://live.cnnindonesia.com/livecnn/smil:cnntv.smil/playlist.m3u8",
 		title: "CNN Indonesia",
-		image: "../img/thumbs/Logo-CNN-Indonesia.jpg"
+		image: "https://cdn2.mbahnunungonline.net/images/Logo-CNN-Indonesia.jpg"
 	});
 	jwplayer().onError(function(){
 		jwplayer().load({
 			file: "https://live.cnnindonesia.com/livecnn/smil:cnntv.smil/playlist.m3u8",
 			title: "CNN Indonesia",
-			//image:""
+			//image:"https://cdn2.mbahnunungonline.net/images/Logo-CNN-Indonesia.jpg"
 		});jwplayer().play();
 		jwplayer().onError(function(){
 			jwplayer("streaming").setup({
