--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="robots" content="noindex">
     <meta property="fb:app_id" content="306338632814491"/>
     <meta property="og:type" content="warningfm:station"/>
-    <meta property="og:url" content="https://tv.mbahnunungonline.net/live/cnnindonesia"/>
+    <meta property="og:url" content="https://livetv.mbahnunungonline.net"/>
     <meta property="og:type" content="movie" /> 
     <meta property="og:video:height" content="326" /> 
     <meta property="og:video:width" content="486" /> 
