--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ document.getElementsByTagName('head')[0].appendChild(meta);
 	});
 	jwplayer().onError(function(){
 		jwplayer().load({
-			file: "https://live.cnnindonesia.com/livecnn/smil:cnntv.smil/playlist.m3u8",
+			file: "https://video.detik.com/trans7/smil:trans7.smil/playlist.m3u8",
 			title: "CNN Indonesia",
 			//image:"https://cdn2.mbahnunungonline.net/images/Logo-CNN-Indonesia.jpg"
 		});jwplayer().play();
