--- a/rcti.html
+++ b/rcti.html
@@ -31,7 +31,7 @@
             autoplay    : false,
             mute        : false,
             live        : true,
-            imageUrl    : "https://content.jwplatform.com/v2/media/c50NQl3R/poster.jpg?width=720",
+            imageUrl    : "https://cdn4.mbahnunungonline.net/images/rcti.jpg",
             channel     : "livestreaming",
             videoUrl    : "https://linier.akamaized.net/live/eds/RCTI_Logo/sa_hls/RCTI_Logo.m3u8",
             adRules     : '',
