--- a/metrotv.html
+++ b/metrotv.html
@@ -19,7 +19,7 @@
        <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://content.jwplatform.com/v2/media/1z8tI7ad/poster.jpg?width=720" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://cdn4.mbahnunungonline.net/images/metrotv.jpg" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://edge.medcom.id/live-edge/smil:metro.smil/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
