--- a/rcti.html
+++ b/rcti.html
@@ -24,7 +24,7 @@
         var video_title = "Live Streaming";
     </script>
         <div id="video" class="fp-slim fp-mute"></div>
-        <script src="https://mbahnunung.github.io/nnVideo/nnVideo.core.js">
+        <script src="https://cdn4.mbahnunungonline.net/js/detikVideo.core.js?v=920f8e58">
         {
             target      : 'video',
             title       : 'Live Streaming',
