--- a/rcti.html
+++ b/rcti.html
@@ -24,11 +24,11 @@
         var video_title = "Live Streaming";
     </script>
         <div id="video" class="fp-slim fp-mute"></div>
-        <script src="https://cdn4.mbahnunungonline.net/js/detikVideo.core.js?v=920f8e58">
+        <script src="https://mbahnunung.github.io/nnVideo/nnVideo.core.js?v=98c76261ffc">
         {
             target      : 'video',
             title       : 'Live Streaming',
-            autoplay    : false,
+            autoplay    : true,
             mute        : false,
             live        : true,
             imageUrl    : "https://cdn4.mbahnunungonline.net/images/rcti.jpg",
