--- a/nettv.html
+++ b/nettv.html
@@ -16,7 +16,7 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
+       <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="https://assets-jpcust.jwpsrv.com/thumbnails/n11hj1du-720.jpg" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
