--- a/embed/cnnindonesia.html
+++ b/embed/cnnindonesia.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# warningfm: http://ogp.me/ns/warningfm#">
-    <title>Live Streaming</title>
+    <title>Live Streaming CNN Indonesia</title>
     <meta charset="utf-8">
     <meta name="robots" content="noindex">
     <meta property="fb:app_id" content="306338632814491"/>
     <meta property="og:type" content="warningfm:station"/>
-    <meta property="og:url" content="https://livetv.mbahnunungonline.net"/>
+    <meta property="og:url" content="https://livetv.mbahnunungonline.net/cnnindonesia"/>
     <meta property="og:type" content="movie" /> 
     <meta property="og:video:height" content="326" /> 
     <meta property="og:video:width" content="486" /> 
@@ -24,7 +24,7 @@
     </style>
     <script type="text/javascript">
     </script>
-    <script src="https://cdn2.mbahnunungonline.net/js/jw7-hlsjs-provider.js"></script>
+    <script src="https://cdn1.mbahnunungonline.net/jwp/jw7-hlsjs-provider.js"></script>
     <script src="//ssl.p.jwpcdn.com/player/v/8.2.2/jwplayer.js?v=1.1.0.0.222"></script>
     <script>jwplayer.key = "9dOyFG96QFb9AWbR+FhhislXHfV1gIhrkaxLYfLydfiYyC0s";</script>
 </head>
@@ -47,13 +47,13 @@ document.getElementsByTagName('head')[0].appendChild(meta);
 		autostart: 'true',
 		file: "https://live.cnnindonesia.com/livecnn/smil:cnntv.smil/playlist.m3u8",
 		title: "CNN Indonesia",
-		image: "https://cdn2.mbahnunungonline.net/images/Logo-CNN-Indonesia.jpg"
+		image: "../img/thumbs/Logo-CNN-Indonesia.jpg"
 	});
 	jwplayer().onError(function(){
 		jwplayer().load({
-			file: "https://video.detik.com/trans7/smil:trans7.smil/playlist.m3u8",
+			file: "https://live.cnnindonesia.com/livecnn/smil:cnntv.smil/playlist.m3u8",
 			title: "CNN Indonesia",
-			//image:"https://cdn2.mbahnunungonline.net/images/Logo-CNN-Indonesia.jpg"
+			//image:""
 		});jwplayer().play();
 		jwplayer().onError(function(){
 			jwplayer("streaming").setup({
