--- a/embed/alarabiya.html
+++ b/embed/alarabiya.html
@@ -19,7 +19,7 @@
        <script src="https://cdnjs.loli.net/ajax/libs/hola_player/1.0.89/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://2.bp.blogspot.com/-YJEXzBdxQYM/XMYaAgWZS0I/AAAAAAAALWw/UitVHliWdT0qrDNCkZ599WuQt-EQFNgBgCLcBGAs/s1600/alarabiya.net.jpg?v=8.3.2" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://2.bp.blogspot.com/-YJEXzBdxQYM/XMYaAgWZS0I/AAAAAAAALWw/UitVHliWdT0qrDNCkZ599WuQt-EQFNgBgCLcBGAs/s1600/alarabiya.net.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://live.alarabiya.net/alarabiapublish/alarabiya.smil/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
