--- a/embed/beritasatu.html
+++ b/embed/beritasatu.html
@@ -19,7 +19,7 @@
        <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://cdn4.mbahnunungonline.net/images/beritaSatu.jpg" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://cdn4.mbahnunungonline.net/images/beritaSatu.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://kastproxy-us.herokuapp.com/http://edge.linknetott.swiftserve.com/live/BsNew/amlst:beritasatunewsbs/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
