--- a/embed/indosiar.html
+++ b/embed/indosiar.html
@@ -16,10 +16,10 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
+       <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://assets-jpcust.jwpsrv.com/thumbnails/7nbbbf6v-720.jpg" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://assets-jpcust.jwpsrv.com/thumbnails/7nbbbf6v-720.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://kastproxy-us.herokuapp.com/http://rr3.dens.tv/s/s251/01.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
