--- a/embed/metrotv.html
+++ b/embed/metrotv.html
@@ -16,10 +16,10 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
+       <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://cdn4.mbahnunungonline.net/images/metrotv.jpg" id="video-player" class="video-js vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://cdn4.mbahnunungonline.net/images/metrotv.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://edge.medcom.id/live-edge/smil:metro.smil/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
