Update and rename net..php to net..html

--- a/live/net..html
+++ b/live/net..html
@@ -33,7 +33,7 @@
 <div align="center">
 <div id="player"></div>
 <iframe
-    src="https://www.youtube-nocookie.com/embed/live_stream?channel=UC1-ATnDVEwKT6-0aEeJ2ibA&modestbranding=1&?autoplay=1"
+    src="/embed/nettv"
     height="340"
     width="596"
     frameborder="0"
