--- a/embed/bbstv.html
+++ b/embed/bbstv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-       <meta charset="utf-8" />
+   <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+       
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
        <!-- Start Meta Ads -->
        <meta name="platform" content="desktop" />
@@ -19,8 +19,8 @@
        <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://4.bp.blogspot.com/-bITXJ_qhAPE/XMfOpLe4U8I/AAAAAAAALY0/_Lsee4KO6dM9efRzPCEhHXk8LkRvh6awwCLcBGAs/s1600/aljazeera_ar.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://aja-hd-web-hls-live.secure.footprint.net/egress/chandler/aljazeera2/arabichd/index.m3u8" type="application/x-mpegURL" />
+        <video poster="https://3.bp.blogspot.com/-fsVYb5UFdxI/XMsaVzdJuTI/AAAAAAAALZ8/EqT4cr5ksfE2cNgTNiTGQYsc-CibC3cxQCLcBGAs/s1600/bbstv_logo.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <source src="https://dcunilive94-lh.akamaihd.net/i/dclive_1@839502/index_150_av-b.m3u8?sd=10&set-akamai-hls-revision=3&rebase=on" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
