--- a/embed/animalplanet.html
+++ b/embed/animalplanet.html
@@ -19,8 +19,8 @@
        <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://4.bp.blogspot.com/-bITXJ_qhAPE/XMfOpLe4U8I/AAAAAAAALY0/_Lsee4KO6dM9efRzPCEhHXk8LkRvh6awwCLcBGAs/s1600/aljazeera_ar.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://aja-hd-web-hls-live.secure.footprint.net/egress/chandler/aljazeera2/arabichd/index.m3u8" type="application/x-mpegURL" />
+        <video poster="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Animal_Planet_logo_%28black_and_green%29.svg/1200px-Animal_Planet_logo_%28black_and_green%29.svg.png" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <source src="https://shivyrubycors.herokuapp.com/http://80.80.160.168/live/1/live.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
