--- a/embed/animax.html
+++ b/embed/animax.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-       <meta charset="utf-8" />
+   <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+       
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
        <!-- Start Meta Ads -->
        <meta name="platform" content="desktop" />
@@ -19,8 +19,8 @@
        <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://4.bp.blogspot.com/-bITXJ_qhAPE/XMfOpLe4U8I/AAAAAAAALY0/_Lsee4KO6dM9efRzPCEhHXk8LkRvh6awwCLcBGAs/s1600/aljazeera_ar.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://aja-hd-web-hls-live.secure.footprint.net/egress/chandler/aljazeera2/arabichd/index.m3u8" type="application/x-mpegURL" />
+        <video poster="https://assets.change.org/photos/5/fw/yl/KFfWYlPtIbbyAup-800x450-noPad.jpg?1521112811?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <source src="https://kastproxy-us.herokuapp.com/http://rr1.dens.tv/h/h144/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
