--- a/embed/b4u-music.html
+++ b/embed/b4u-music.html
@@ -19,8 +19,8 @@
        <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://4.bp.blogspot.com/-bITXJ_qhAPE/XMfOpLe4U8I/AAAAAAAALY0/_Lsee4KO6dM9efRzPCEhHXk8LkRvh6awwCLcBGAs/s1600/aljazeera_ar.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://aja-hd-web-hls-live.secure.footprint.net/egress/chandler/aljazeera2/arabichd/index.m3u8" type="application/x-mpegURL" />
+        <video poster="https://vignette.wikia.nocookie.net/logopedia/images/1/17/B4U_MUSIC.png/revision/latest?cb=20150308151706" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <source src="https://shivyrubycors.herokuapp.com/http://161.0.157.5/PLTV/88888888/224/3221226332/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
