--- a/embed/bbcarabic.html
+++ b/embed/bbcarabic.html
@@ -19,8 +19,8 @@
        <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://4.bp.blogspot.com/-bITXJ_qhAPE/XMfOpLe4U8I/AAAAAAAALY0/_Lsee4KO6dM9efRzPCEhHXk8LkRvh6awwCLcBGAs/s1600/aljazeera_ar.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://aja-hd-web-hls-live.secure.footprint.net/egress/chandler/aljazeera2/arabichd/index.m3u8" type="application/x-mpegURL" />
+        <video poster="https://3.bp.blogspot.com/--p5ZodODnY0/XMfJ5-AufDI/AAAAAAAALYk/VqWmmm2Jqqoosdpm-zJ5N8rZv9LyFfYnACLcBGAs/s1600/bbc_arabic_new_branding.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <source src="https://bbc.mbahnunungonline.org/live/disk1/BBC_Arabic/anevia1/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
