--- a/embed/celebestv.html
+++ b/embed/celebestv.html
@@ -19,8 +19,8 @@
        <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://4.bp.blogspot.com/-bITXJ_qhAPE/XMfOpLe4U8I/AAAAAAAALY0/_Lsee4KO6dM9efRzPCEhHXk8LkRvh6awwCLcBGAs/s1600/aljazeera_ar.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://aja-hd-web-hls-live.secure.footprint.net/egress/chandler/aljazeera2/arabichd/index.m3u8" type="application/x-mpegURL" />
+        <video poster="https://3.bp.blogspot.com/-IDCcv31aPBw/XMso04mXYTI/AAAAAAAALaQ/xZFYZH8JU-AGvwa2XZY90w6_t4_LmgJJgCLcBGAs/s1600/celebestv.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <source src="https://5bb7d87891314.streamlock.net/celebesmedia/live/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
