Update and rename tvi.php to tvi.html

--- a/embed/tvi.html
+++ b/embed/tvi.html
@@ -16,7 +16,7 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
+       <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="https://4.bp.blogspot.com/-BJpbb1Wxc8M/XMK1ZG2aucI/AAAAAAAALVw/92dEplccyMUliAlaktqK7ka0xUyjOI3nQCLcBGAs/s1600/TV_Okey_RTM.png?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
