--- a/embed/tvri.html
+++ b/embed/tvri.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://content.jwplatform.com/v2/media/odC0YX5G/poster.jpg?width=720" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s11/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://castprox.herokuapp.com/http://rr2.dens.tv/s/s11/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
