--- a/live/tvri.html
+++ b/live/tvri.html
@@ -14,9 +14,9 @@
     <meta property="og:title" content="TVRI" /> 
     <meta property="og:description" content="Klik Gambarnya Boss untuk nonton TVRI langsung lewat Facebook." />
     <meta property="og:image" content="https://2.bp.blogspot.com/-sbCfmxnBPOo/UcA7bpRsFTI/AAAAAAAABvo/IW3EUsU4Wr4/s1600/tvri-nasional.png" />
-    <meta property="og:video" content="https://cdn1.mbahnunungonline.net/player/player5.8.swf?file=tvri&type=rtmp&streamer=rtmp://118.97.183.222:1935/discover&autostart=true&stretching=exactfit&volume=100&bandwidth=1&duration=0&showdigits=&&stretching=exactfit&backcolor=000000&frontcolor=ffffff&lightcolor=CD0000&screencolor=0000fff&volume=100&controlbar=over&autostart=true&displayclick=fullscreen&repeat=false&image=https://3.bp.blogspot.com/-LdwkGgcxd14/VvZZqtVA00I/AAAAAAAACyw/li13FV-kvxszq0dz67EOylCfvT66v3MDw/s1600/LOGO%2BTVRI.png"/>
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/jwplayer.css' />
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/player.css' />
+    <meta property="og:video" content="https://cdn4.mbahnunungonline.net/player/player5.8.swf?file=tvri&type=rtmp&streamer=rtmp://118.97.183.222:1935/discover&autostart=true&stretching=exactfit&volume=100&bandwidth=1&duration=0&showdigits=&&stretching=exactfit&backcolor=000000&frontcolor=ffffff&lightcolor=CD0000&screencolor=0000fff&volume=100&controlbar=over&autostart=true&displayclick=fullscreen&repeat=false&image=https://3.bp.blogspot.com/-LdwkGgcxd14/VvZZqtVA00I/AAAAAAAACyw/li13FV-kvxszq0dz67EOylCfvT66v3MDw/s1600/LOGO%2BTVRI.png"/>
+    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/jwplayer.css' />
+    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/player.css' />
     <style type="text/css">
         body { margin:0 auto; padding:0; background:#2f3542; overflow: hidden; }
         #title { font:bold 24px/36px Arial, sans-serif; color:#000; margin:40px auto 10px auto; display:none; text-shadow:#FFF 2px 2px 0; }
