--- a/live/beritasatu.html
+++ b/live/beritasatu.html
@@ -14,9 +14,9 @@
     <meta property="og:title" content="BeritaSatu" /> 
     <meta property="og:description" content="Klik Gambarnya Boss untuk nonton BeritaSatu langsung lewat Facebook." />
     <meta property="og:image" content="https://3.bp.blogspot.com/-p6qwZWRUdTc/T8d07Dixt8I/AAAAAAAABCA/ZFtYpUN2gu8/s320/berita-satu.png" />
-    <meta property="og:video" content="https://cdn1.mbahnunungonline.net/player/player5.8.swf?file=beritasatu&type=rtmp&streamer=rtmp://118.97.183.222:1935/discover&autostart=true&stretching=exactfit&volume=100&bandwidth=1&duration=0&showdigits=&&stretching=exactfit&backcolor=000000&frontcolor=ffffff&lightcolor=CD0000&screencolor=0000fff&volume=100&controlbar=over&autostart=true&displayclick=fullscreen&repeat=false&image=https://3.bp.blogspot.com/-XAlmX7omXtE/UrIBNxp8qRI/AAAAAAAACTc/WcyQrjSLQxQ/s1600/BeritaSatu.png"/>
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/jwplayer.css' />
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/player.css' />
+    <meta property="og:video" content="https://cdn4.mbahnunungonline.net/player/player5.8.swf?file=beritasatu&type=rtmp&streamer=rtmp://118.97.183.222:1935/discover&autostart=true&stretching=exactfit&volume=100&bandwidth=1&duration=0&showdigits=&&stretching=exactfit&backcolor=000000&frontcolor=ffffff&lightcolor=CD0000&screencolor=0000fff&volume=100&controlbar=over&autostart=true&displayclick=fullscreen&repeat=false&image=https://3.bp.blogspot.com/-XAlmX7omXtE/UrIBNxp8qRI/AAAAAAAACTc/WcyQrjSLQxQ/s1600/BeritaSatu.png"/>
+    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/jwplayer.css' />
+    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/player.css' />
     <style type="text/css">
         body { margin:0 auto; padding:0; background:#2f3542; overflow: hidden; }
         #title { font:bold 24px/36px Arial, sans-serif; color:#000; margin:40px auto 10px auto; display:none; text-shadow:#FFF 2px 2px 0; }
