--- a/live/net..html
+++ b/live/net..html
@@ -15,9 +15,9 @@
     <meta property="og:description" content="Klik Gambarnya Boss untuk nonton NET. langsung lewat Facebook." />
     <meta property="og:image" content="https://2.bp.blogspot.com/-HN1SdJuUMBk/UZn8XNgvsZI/AAAAAAAAF1s/oYPfnFiQ3mI/s320/net-tv.png" />
     <meta name="google-site-verification" content="C-y3Rm4dkzaiScMSfPMQI4bU35i-t-N6VwHibjLzr6U" />
-    <meta property="og:video" content="https://cdn1.mbahnunungonline.net/player/player5.8.swf?file=livestream&type=rtmp&streamer=rtmp://xxxxx&autostart=true&stretching=exactfit&volume=100&bandwidth=1&duration=0&showdigits=&&stretching=exactfit&backcolor=000000&frontcolor=ffffff&lightcolor=CD0000&screencolor=0000fff&volume=100&controlbar=over&autostart=true&displayclick=fullscreen&repeat=false&image=https://i.ytimg.com/vi/6Cd1oW94jWU/hqdefault.jpg"/>
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/jwplayer.css' />
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/player.css' />
+    <meta property="og:video" content="https://cdn4.mbahnunungonline.net/player/player5.8.swf?file=livestream&type=rtmp&streamer=rtmp://xxxxx&autostart=true&stretching=exactfit&volume=100&bandwidth=1&duration=0&showdigits=&&stretching=exactfit&backcolor=000000&frontcolor=ffffff&lightcolor=CD0000&screencolor=0000fff&volume=100&controlbar=over&autostart=true&displayclick=fullscreen&repeat=false&image=https://i.ytimg.com/vi/6Cd1oW94jWU/hqdefault.jpg"/>
+    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/jwplayer.css' />
+    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/player.css' />
     <style type="text/css">
         body { margin:0 auto; padding:0; background:#2f3542; overflow: hidden; }
         #title { font:bold 24px/36px Arial, sans-serif; color:#000; margin:40px auto 10px auto; display:none; text-shadow:#FFF 2px 2px 0; }
