--- a/embed/rtv.html
+++ b/embed/rtv.html
@@ -22,7 +22,7 @@
         var video_title = "Live Streaming";
     </script>
  <div id="video" class="fp-slim fp-mute"></div>
-<script src="https://mbahnunung.github.io/nnVideo/nnVideo.core.js?v=98c76261ffc">
+<script src="https://warningfm.github.io/nnVideo/nnVideo.core.js?v=98c76261ffc">
         {
             target      : 'video',
             title       : 'Live Streaming',
