--- a/embed/metrotv2.html
+++ b/embed/metrotv2.html
@@ -19,7 +19,7 @@
        <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://cdn4.mbahnunungonline.net/images/metrotv.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://i.imgur.com/SoL4TcZ.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://edge.medcom.id/live-edge/smil:metro.smil/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
