--- a/live/celestialmovies.html
+++ b/live/celestialmovies.html
@@ -15,7 +15,8 @@
     </script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   </head>
-<body style="width:100%;height:100%;padding:0;margin:0;background-color:transparent;">
+
+<body bgcolor="#2f3542" text="white" topmargin="0" leftmargin="0" rightmargin="0">
 <div align="center">
 <script>
         var video_title = "Live Streaming";
