--- a/embed/mycinema.html
+++ b/embed/mycinema.html
@@ -33,7 +33,7 @@
             live        : true,
             imageUrl    : "../img/thumbs/my-cinema.jpg?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://zet.pluginsandthemes.ro/http://210.210.155.35/qwr9ew/s/s31/index2.m3u8",
+            videoUrl    : "https://zet.pluginsandthemes.ro/http://210.210.155.35/qwr9ew/s/s31/index.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
