--- a/embed/cw.html
+++ b/embed/cw.html
@@ -34,7 +34,7 @@
             live        : true,
             imageUrl    : "https://4.bp.blogspot.com/-N1eBGo7KhSQ/XLm86RxoaCI/AAAAAAAALR8/nfXO635ZMhkji9cP7F_pmzitx5P8UoTsgCLcBGAs/s1600/cinema-world.jpg?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://kastproxy-us.herokuapp.com/http://rr.dens.tv/h/h04/index.m3u8",
+            videoUrl    : "https://kastproxy-us.herokuapp.com/http://rr.dens.tv/h/h04/index2.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
