--- a/embed/babytv.html
+++ b/embed/babytv.html
@@ -24,7 +24,7 @@
   <body class="desktop">
 
     <video poster="https://i.ytimg.com/vi/zDZ3DVF9xDw/maxresdefault.jpg?v=8.3.2" id="player" class="video-js vjs-big-play-centered vjs-fill" controls autoplay>
-    <source src="https://kastproxy-us.herokuapp.com/http://livestream.biznetvideo.net/biznet_kids/smil:kids.smil/chunklist.m3u8" type="application/x-mpegURL" />
+    <source src="https://kastproxy-us.herokuapp.com/http://livestream.biznetvideo.net/biznet_kids/smil:kids.smil/chunklist_w441806981_b2256000_slen_tkYml6a2V5bGl2ZXN0YXJ0dGltZT0wJmJpemtleWxpdmVlbmR0aW1lPTAmYml6a2V5bGl2ZUN1c3RvbVBhcmFtZXRlcj1teVBhcmFtZXRlciZiaXprZXlsaXZlaGFzaD1xQXJpMU0yeHVfTUFsbkh3VlJ0T3MyNGxSOFlfSFNEaWpOMkNSTmdoaWZVbGxoWXFRU0Rsa2QwcUU4Q2tad3hD.m3u8" type="application/x-mpegURL" />
     </video>
 
   <script src="//cdn.jsdelivr.net/npm/videojs-contrib-hls/dist/videojs-contrib-hls.js"></script>
