--- a/live/tv2.html
+++ b/live/tv2.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-<title>TV2 RTM</title>
+    <title>TV2 RTM</title>
     <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/jwplayer.css' />
     <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/player.css' />
     <style type="text/css">
@@ -12,8 +13,7 @@
     </style>
     <script type="text/javascript">
     </script>
-    <script src="//ssl.p.jwpcdn.com/player/v/8.2.2/jwplayer.js?v=1.1.0.0.222"></script>
-    <script>jwplayer.key = "9dOyFG96QFb9AWbR+FhhislXHfV1gIhrkaxLYfLydfiYyC0s";</script>
+    
 </head>
 <body style="width:100%;height:100%;padding:0;margin:0;background-color:#2f3542;">
 <div align="center">
