--- a/embed/trans7.html
+++ b/embed/trans7.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://assets-jpcust.jwpsrv.com/thumbnails/dovtazeb-720.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s101/01.m3u8" type="application/x-mpegURL" />
+        <source src="https://livetvhooq.akamaized.net/659beb5e22754dcb90ffd25247be6627/ap-southeast-1/5493668622001/profile_0/chunklist.m3u8?hdnts=st=1574877142~exp=9007200829618133~acl=/659beb5e22754dcb90ffd25247be6627/*/profile_0/chunklist.m3u8*~hmac=3e41c2fd1fa80a6d3012b880bed81fc1cf1f75ede9881eb838af30e22d4c6727" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
