--- a/embed/babytv.html
+++ b/embed/babytv.html
@@ -25,7 +25,7 @@
   <body class="desktop">
 
     <video poster="https://i.ytimg.com/vi/zDZ3DVF9xDw/maxresdefault.jpg?v=8.3.2" id="player" class="video-js vjs-big-play-centered vjs-fill" controls autoplay>
-    <source src="https://kastproxy-us.herokuapp.com/http://livestream.biznetvideo.net/biznet_kids/smil:kids.smil/playlist.m3u8?bizkeylivestarttime=0&bizkeyliveendtime=0&bizkeyliveCustomParameter=myParameter&bizkeylivehash=qAri1M2xu_MAlnHwVRtOs24lR8Y_HSDijN2CRNghifUllhYqQSDlkd0qE8CkZwxC" type="application/x-mpegURL" />
+    <source src="https://d3kw4vhbdpgtqk.cloudfront.net/hls/miaomipcweb/prog_index.m3u8" type="application/x-mpegURL" />
     </video>
 
   <script src="//cdn.jsdelivr.net/npm/videojs-contrib-hls/dist/videojs-contrib-hls.js"></script>
