--- a/embed/jimjamtv.html
+++ b/embed/jimjamtv.html
@@ -24,7 +24,7 @@
   <body class="desktop">
 
     <video poster="https://4.bp.blogspot.com/-i18eFvIKgks/W-OcB1mRX_I/AAAAAAAAKA8/6ERICYxsdSMo-f92ho_Bh23M2lb9npb7ACLcBGAs/s1600/jimjam_og.png?v=8.3.2" id="player" class="video-js vjs-big-play-centered vjs-fill" controls autoplay>
-    <source src="https://liveanevia.mncnow.id/live/eds/Nickelodeon/sa_hls/Nickelodeon.m3u8" type="application/x-mpegURL" />
+    <source src="https://cors.viastreaming.net/http://210.210.155.35/uq2663/h/h01/index2.m3u8" type="application/x-mpegURL" />
     </video>
 
   <script src="//cdn.jsdelivr.net/npm/videojs-contrib-hls/dist/videojs-contrib-hls.js"></script>
