Update and rename zoom.php to zoom.html

--- a/embed/zoom.html
+++ b/embed/zoom.html
@@ -16,11 +16,11 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
+       <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="https://3.bp.blogspot.com/-rpqZbTYD3PA/W-GLXA9JmiI/AAAAAAAAJ_U/q4BiDXuSvrI1KM3oizrxIoQq75xXXoeiwCLcBGAs/s1600/zoom-tv-logo.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://zoomweblive-lh.akamaihd.net/i/Zoomweb_1@348071/master.m3u8" type="application/x-mpegURL" />
+        <source src="https://zoomweblive-lh.akamaihd.net/i/Zoom-TIL-WAP/Zoomweb_1@348071/master.m3u8 " type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
