--- a/embed/ndtv.html
+++ b/embed/ndtv.html
@@ -16,7 +16,7 @@
       <div id="vjs-video-embed" class="left relative"></div>
       <div id="my-video" class="video_embed_hls post_embed_video_center">
       <video class="video-js vjs-default-skin vjs-16-9" controls autoplay></video>
-      <script>(function(){var a={linear:"",};var b=document.location.search.substr(1);window.hola_player({title:"",poster:"https://3.bp.blogspot.com/-ufEMgyTyFc4/W92Ty6Ni02I/AAAAAAAAArc/sPDQkphFa-AnR_w5ZDwhza0rjS5twrTkACLcBGAs/s1600/ndtv_livetv.png?v=8.3.2",sources:[{src:"https://dai.google.com/linear/hls/pb/event/FbL8YN7tSnqysJ6wVjKW7A/stream/51090b42-62f6-4f47-9656-eba3e2dc122a:SIN/variant/458316907ead0c1d5472cf6eb02c2ff3/bandwidth/232320.m3u8",}],ads:{adTagUrl:a[b||"linear"]||b,},settings:{quality:true,},watermark:{image:'',position:'bottom-left',fadeTime:5000,},})})();</script>
+      <script>(function(){var a={linear:"",};var b=document.location.search.substr(1);window.hola_player({title:"",poster:"https://3.bp.blogspot.com/-ufEMgyTyFc4/W92Ty6Ni02I/AAAAAAAAArc/sPDQkphFa-AnR_w5ZDwhza0rjS5twrTkACLcBGAs/s1600/ndtv_livetv.png?v=8.3.2",sources:[{src:"https://dai.google.com/linear/hls/event/FbL8YN7tSnqysJ6wVjKW7A/master.m3u8",}],ads:{adTagUrl:a[b||"linear"]||b,},settings:{quality:true,},watermark:{image:'',position:'bottom-left',fadeTime:5000,},})})();</script>
   </div>
  
   </body></html>
