--- a/embed/9xmusic.html
+++ b/embed/9xmusic.html
@@ -19,7 +19,7 @@
       <div id="vjs-video-embed" class="left relative"></div>
       <div id="my-video" class="video_embed_hls post_embed_video_center">
       <video class="video-js vjs-default-skin vjs-16-9" controls autoplay></video>
-      <script>(function(){var a={linear:"",};var b=document.location.search.substr(1);window.hola_player({title:"9xmusic",poster:"https://www.pngkit.com/png/detail/853-8534604_estemeed-clientele-9x-music.png?v=8.3.2",sources:[{src:"https://msllive.yuppcdn.net/live/yuppmslukmo1/hls/live/2009280/9xmusic/9xmusic/playlist/master.m3u8?dw=60&hdnts=st=1584733807~exp=1584748207~acl=!*/2009280/9xmusic/*!/payload/9xm_5_21691719_NA_IN_NA_9xm_1037/*~hmac=09036f8c944876ef0c2c8534d46c9c197d6d3f9ce36c44d07f0ff50f81e9d4b1&ud=1037_9xm_21691719_live_-1_-1&b=100-2500",}],ads:{adTagUrl:a[b||"linear"]||b,},settings:{quality:true,},watermark:{image:'',position:'bottom-left',fadeTime:5000,},})})();</script>
+      <script>(function(){var a={linear:"",};var b=document.location.search.substr(1);window.hola_player({title:"9xmusic",poster:"https://2.bp.blogspot.com/-J4kmx-g8UxA/TgNmoBlgGgI/AAAAAAAABvM/CIuIDHga9n8/s1600/01.png?v=8.3.2",sources:[{src:"https://msllive.yuppcdn.net/live/yuppmslukmo1/hls/live/2009280/9xmusic/9xmusic/playlist/master.m3u8?dw=60&hdnts=st=1584733807~exp=1584748207~acl=!*/2009280/9xmusic/*!/payload/9xm_5_21691719_NA_IN_NA_9xm_1037/*~hmac=09036f8c944876ef0c2c8534d46c9c197d6d3f9ce36c44d07f0ff50f81e9d4b1&ud=1037_9xm_21691719_live_-1_-1&b=100-2500",}],ads:{adTagUrl:a[b||"linear"]||b,},settings:{quality:true,},watermark:{image:'',position:'bottom-left',fadeTime:5000,},})})();</script>
   </div>
  
   </body>
