--- a/embed/b4u-music.html
+++ b/embed/b4u-music.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://vignette.wikia.nocookie.net/logopedia/images/1/17/B4U_MUSIC.png/revision/latest?cb=20150308151706" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://shivyrubycors.herokuapp.com/http://161.0.157.5/PLTV/88888888/224/3221226332/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://shivyrubycors.herokuapp.com/http://103.199.161.254/Content/b4umovies/Live/Channel(B4UMovies)/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
